--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,9 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+              "assets",
+              "favicon.png" 
+          ],
             "styles": [
               "src/styles.scss"
             ],
