--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,9 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "assets",
-              "favicon.png" 
-          ],
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "src/styles.scss"
             ],
